// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalendarContainer/> props headerFormat correctly 1`] = `
<div
  className="calendar__container calendar--show"
>
  <calendarHead
    title="2018/12/01"
  />
  <CalendarBody
    current={"2018-12-01T00:00:00.000Z"}
  />
</div>
`;

exports[`<CalendarContainer/> props locale correctly 1`] = `
<CalendarContainer
  current={"2018-12-01T00:00:00.000Z"}
  headerFormat="YYYY년 MM월"
  locale="en"
  show={true}
>
  <div
    className="calendar__container calendar--show"
  >
    <calendarHead
      title="2018년 12월"
    >
      <div
        className="calendar__head"
      >
        <div
          className="calendar__head--prev"
        />
        <h2
          className="calendar__head--title"
        >
          2018년 12월
        </h2>
        <div
          className="calendar__head--next"
        />
      </div>
    </calendarHead>
    <CalendarBody
      current={"2018-12-01T00:00:00.000Z"}
    >
      <div
        className="calendar__body"
      >
        <table
          className="calendar__body--table"
        >
          <thead>
            <tr>
              <th
                key="0"
              >
                Sun
              </th>
              <th
                key="1"
              >
                Mon
              </th>
              <th
                key="2"
              >
                Tue
              </th>
              <th
                key="3"
              >
                Wed
              </th>
              <th
                key="4"
              >
                Thu
              </th>
              <th
                key="5"
              >
                Fri
              </th>
              <th
                key="6"
              >
                Sat
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              key="0"
            >
              <Day
                customClass=""
                customText=""
                end={false}
                key="0"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="1"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="2"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="3"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="4"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="5"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--6"
                customText=""
                end={false}
                key="6"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="1"
              >
                <td
                  className="calendar__day calendar__day--6"
                  onClick={[Function]}
                >
                  <span>
                    1
                  </span>
                </td>
              </Day>
            </tr>
            <tr
              key="1"
            >
              <Day
                customClass="calendar__day--0"
                customText=""
                end={false}
                key="1"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="2"
              >
                <td
                  className="calendar__day calendar__day--0"
                  onClick={[Function]}
                >
                  <span>
                    2
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--1"
                customText=""
                end={false}
                key="2"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="3"
              >
                <td
                  className="calendar__day calendar__day--1"
                  onClick={[Function]}
                >
                  <span>
                    3
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--2"
                customText=""
                end={false}
                key="3"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="4"
              >
                <td
                  className="calendar__day calendar__day--2"
                  onClick={[Function]}
                >
                  <span>
                    4
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--3"
                customText=""
                end={false}
                key="4"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="5"
              >
                <td
                  className="calendar__day calendar__day--3"
                  onClick={[Function]}
                >
                  <span>
                    5
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--4"
                customText=""
                end={false}
                key="5"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="6"
              >
                <td
                  className="calendar__day calendar__day--4"
                  onClick={[Function]}
                >
                  <span>
                    6
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--5"
                customText=""
                end={false}
                key="6"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="7"
              >
                <td
                  className="calendar__day calendar__day--5"
                  onClick={[Function]}
                >
                  <span>
                    7
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--6"
                customText=""
                end={false}
                key="7"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="8"
              >
                <td
                  className="calendar__day calendar__day--6"
                  onClick={[Function]}
                >
                  <span>
                    8
                  </span>
                </td>
              </Day>
            </tr>
            <tr
              key="2"
            >
              <Day
                customClass="calendar__day--0"
                customText=""
                end={false}
                key="2"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="9"
              >
                <td
                  className="calendar__day calendar__day--0"
                  onClick={[Function]}
                >
                  <span>
                    9
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--1"
                customText=""
                end={false}
                key="3"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="10"
              >
                <td
                  className="calendar__day calendar__day--1"
                  onClick={[Function]}
                >
                  <span>
                    10
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--2"
                customText=""
                end={false}
                key="4"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="11"
              >
                <td
                  className="calendar__day calendar__day--2"
                  onClick={[Function]}
                >
                  <span>
                    11
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--3"
                customText=""
                end={false}
                key="5"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="12"
              >
                <td
                  className="calendar__day calendar__day--3"
                  onClick={[Function]}
                >
                  <span>
                    12
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--4"
                customText=""
                end={false}
                key="6"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="13"
              >
                <td
                  className="calendar__day calendar__day--4"
                  onClick={[Function]}
                >
                  <span>
                    13
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--5"
                customText=""
                end={false}
                key="7"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="14"
              >
                <td
                  className="calendar__day calendar__day--5"
                  onClick={[Function]}
                >
                  <span>
                    14
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--6"
                customText=""
                end={false}
                key="8"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="15"
              >
                <td
                  className="calendar__day calendar__day--6"
                  onClick={[Function]}
                >
                  <span>
                    15
                  </span>
                </td>
              </Day>
            </tr>
            <tr
              key="3"
            >
              <Day
                customClass="calendar__day--0"
                customText=""
                end={false}
                key="3"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="16"
              >
                <td
                  className="calendar__day calendar__day--0"
                  onClick={[Function]}
                >
                  <span>
                    16
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--1"
                customText=""
                end={false}
                key="4"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="17"
              >
                <td
                  className="calendar__day calendar__day--1"
                  onClick={[Function]}
                >
                  <span>
                    17
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--2"
                customText=""
                end={false}
                key="5"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="18"
              >
                <td
                  className="calendar__day calendar__day--2"
                  onClick={[Function]}
                >
                  <span>
                    18
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--3"
                customText=""
                end={false}
                key="6"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="19"
              >
                <td
                  className="calendar__day calendar__day--3"
                  onClick={[Function]}
                >
                  <span>
                    19
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--4"
                customText=""
                end={false}
                key="7"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="20"
              >
                <td
                  className="calendar__day calendar__day--4"
                  onClick={[Function]}
                >
                  <span>
                    20
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--5"
                customText=""
                end={false}
                key="8"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="21"
              >
                <td
                  className="calendar__day calendar__day--5"
                  onClick={[Function]}
                >
                  <span>
                    21
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--6"
                customText=""
                end={false}
                key="9"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="22"
              >
                <td
                  className="calendar__day calendar__day--6"
                  onClick={[Function]}
                >
                  <span>
                    22
                  </span>
                </td>
              </Day>
            </tr>
            <tr
              key="4"
            >
              <Day
                customClass="calendar__day--0"
                customText=""
                end={false}
                key="4"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="23"
              >
                <td
                  className="calendar__day calendar__day--0"
                  onClick={[Function]}
                >
                  <span>
                    23
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--1"
                customText=""
                end={false}
                key="5"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="24"
              >
                <td
                  className="calendar__day calendar__day--1"
                  onClick={[Function]}
                >
                  <span>
                    24
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--2"
                customText=""
                end={false}
                key="6"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="25"
              >
                <td
                  className="calendar__day calendar__day--2"
                  onClick={[Function]}
                >
                  <span>
                    25
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--3"
                customText=""
                end={false}
                key="7"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="26"
              >
                <td
                  className="calendar__day calendar__day--3"
                  onClick={[Function]}
                >
                  <span>
                    26
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--4"
                customText=""
                end={false}
                key="8"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="27"
              >
                <td
                  className="calendar__day calendar__day--4"
                  onClick={[Function]}
                >
                  <span>
                    27
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--5"
                customText=""
                end={false}
                key="9"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="28"
              >
                <td
                  className="calendar__day calendar__day--5"
                  onClick={[Function]}
                >
                  <span>
                    28
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--6"
                customText=""
                end={false}
                key="10"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="29"
              >
                <td
                  className="calendar__day calendar__day--6"
                  onClick={[Function]}
                >
                  <span>
                    29
                  </span>
                </td>
              </Day>
            </tr>
            <tr
              key="5"
            >
              <Day
                customClass="calendar__day--0"
                customText=""
                end={false}
                key="5"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="30"
              >
                <td
                  className="calendar__day calendar__day--0"
                  onClick={[Function]}
                >
                  <span>
                    30
                  </span>
                </td>
              </Day>
              <Day
                customClass="calendar__day--1"
                customText=""
                end={false}
                key="6"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value="31"
              >
                <td
                  className="calendar__day calendar__day--1"
                  onClick={[Function]}
                >
                  <span>
                    31
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="7"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="8"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="9"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="10"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
              <Day
                customClass=""
                customText=""
                end={false}
                key="11"
                onChange={[Function]}
                range={false}
                selected={false}
                start={false}
                today={false}
                value=" "
              >
                <td
                  className="calendar__day"
                  onClick={[Function]}
                >
                  <span>
                     
                  </span>
                </td>
              </Day>
            </tr>
          </tbody>
        </table>
      </div>
    </CalendarBody>
  </div>
</CalendarContainer>
`;

exports[`<CalendarContainer/> props show correctly 1`] = `
<div
  className="calendar__container calendar--show"
>
  <calendarHead
    title="2018년 12월"
  />
  <CalendarBody
    current={"2018-12-01T00:00:00.000Z"}
  />
</div>
`;

exports[`<CalendarContainer/> renders with no props 1`] = `
<div
  className="calendar__container calendar--show"
>
  <calendarHead
    title="2018년 12월"
  />
  <CalendarBody
    current={"2018-12-01T00:00:00.000Z"}
  />
</div>
`;
